--- a/sass/components/main_components/_main-menu.scss
+++ b/sass/components/main_components/_main-menu.scss
@@ -6,7 +6,7 @@
   background-color: $color-white;
   font-size: 1.4rem;
 
-  @include respond(phone) {
+  @include respond(phone-land) {
     display: none;
   }
 
