--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,7 +31,9 @@
 @import "layout/footer";
 @import "layout/menu";
 @import "layout/products";
+@import "layout/about-us";
 
 // pages
 @import "pages/home";
-@import "pages/product-page";
+@import "pages/products-page";
+@import "pages/about-us-page";
