--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -48,6 +48,11 @@ body {
   font-weight: 400;
   line-height: 1.333;
   letter-spacing: 0;
+
+  @include respond(phone-port) {
+    font-size: 18px;
+    line-height: 1.5;
+  }
 }
 
 .heading-tertiary {
@@ -64,4 +69,8 @@ body {
   font-weight: 400;
   line-height: 1.5715;
   letter-spacing: 0;
+
+  @include respond(phone-port) {
+    font-size: $font-size-huge;
+  }
 }
