--- a/sass/components/main_components/_main-swiper.scss
+++ b/sass/components/main_components/_main-swiper.scss
@@ -4,7 +4,7 @@
   border-radius: 1.2rem;
   overflow: hidden;
 
-  @include respond(phone) {
+  @include respond(phone-land) {
     flex: 0 0 92%;
     margin: 0 auto;
     height: 39.8rem;
@@ -12,6 +12,7 @@
 
   &--slide {
     text-align: center;
+    width: 100%;
     width: 100%;
 
     img {
@@ -32,7 +33,7 @@
 
 .main__swiper--button-next,
 .main__swiper--button-prev {
-  @include respond(phone) {
+  @include respond(phone-land) {
     display: none;
   }
 }
@@ -66,7 +67,7 @@
   }
 }
 
-@media screen and (min-width: 37.5625em) {
+@media screen and (min-width: 48em) {
 
   // 601px
   .swiper-pagination {
