--- a/sass/components/header_components/_header-menu.scss
+++ b/sass/components/header_components/_header-menu.scss
@@ -9,7 +9,10 @@
     width: 2.2rem;
     height: 2.2rem;
     margin-right: 1rem;
-    cursor: pointer;
+
+    svg path {
+      fill: #171717;
+    }
   }
 
   &-text {
