--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,8 +32,10 @@
 @import "layout/menu";
 @import "layout/products";
 @import "layout/about-us";
+@import "layout/t&c";
 
 // pages
 @import "pages/home";
 @import "pages/products-page";
 @import "pages/about-us-page";
+@import "pages/t&c-page";
