--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,50 +1,39 @@
 .card {
-  width: 23.6rem;
-  transition: all .01s ease;
+  width: 21.4rem;
+  transition: 200ms;
   border: 1px solid transparent;
   background-color: $color-white;
 
   &:hover {
     border-radius: 1rem;
     border: 1px solid #E2E7ED;
-    transform: scale(1.01);
-    backface-visibility: hidden;
   }
 
+  // card image
   &__image {
     position: relative;
-    margin: 1rem;
     height: 21.6rem;
 
     img {
-      @include resImgNM;
+      @include resImgNM
     }
   }
 
+  // card details
   &__details {
-    margin: .7rem 2rem 3.1rem 2rem;
-    height: 6.6rem;
+    margin: 1.6rem 1rem 3.1rem 1rem;
   }
 
-  // card heading
-  &__title,
-  &__id {
+  &__title {
     font-family: "Helvetica Neue LTGEOW 82-55 Rm";
-    font-size: $default-font-size;
+    font-size: $font-size-big;
     color: $color-very-dark-grey;
-
-    span {
-      font-size: $font-size-big;
-    }
+    line-height: 2.556;
+    margin-bottom: 1.5rem;
   }
 
-  // card price
   &__price {
     display: flex;
-    justify-content: flex-start;
-    text-align: center;
-    margin-top: 1.6rem;
-    position: relative;
 
     &-real {
       margin-right: 1.4rem;
@@ -54,15 +43,16 @@
     }
 
     &-sale {
+      margin-top: .2rem;
       font-family: "Helvetica Neue LTGEOW 82-55 Rm";
       font-size: $font-size-md;
       color: $color-black;
       text-decoration: line-through;
-      @include absCenter;
     }
   }
 
+  // card button modifier
   &__btn--1 {
-    margin: 6.16rem 2rem 1rem 2rem;
+    margin: 0 auto;
   }
 }
