--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -17,6 +17,7 @@ ul {
 html {
   // this defines what 1rem is
   font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
+  box-sizing: border-box;
 
   @include respond(tab-land) {
     font-size: 50%; //1rem = 8px, 8/16 = 50%
@@ -40,5 +41,7 @@ html {
 }
 
 body {
-  box-sizing: border-box;
+  font-family: "BPG LE Studio 04 Caps";
+  font-weight: 400;
+  line-height: 1.6;
 }
