--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -30,7 +30,8 @@ ul {
   list-style-type: none; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  box-sizing: border-box; }
   @media (max-width: 75em) {
     html {
       font-size: 50%; } }
@@ -48,7 +49,9 @@ html {
       font-size: 75%; } }
 
 body {
-  box-sizing: border-box; }
+  font-family: "BPG LE Studio 04 Caps";
+  font-weight: 400;
+  line-height: 1.6; }
 
 @font-face {
   font-family: "BPG LE Studio 04 Caps";
