--- a/sass/components/_breadcrumbs.scss
+++ b/sass/components/_breadcrumbs.scss
@@ -19,16 +19,19 @@
 
   &__link {
     font-size: $font-size-md;
-
-    @include respond(phone-port) {
-      font-size: 12px;
-    }
-
     color: $color-light-grey;
 
     &--active {
       color: $primary-color;
       cursor: text;
+    }
+
+    @include respond(phone-land) {
+      font-size: 14px;
+    }
+
+    @include respond(phone-port) {
+      font-size: 12px;
     }
   }
 }
