--- a/sass/components/header_components/_form.scss
+++ b/sass/components/header_components/_form.scss
@@ -3,15 +3,15 @@
   display: flex;
   flex: 0 0 28.4773060029%;
   height: 5rem;
+  border-radius: 1rem;
+  overflow: hidden;
 
   &__input {
-    // structure
     width: 100%;
     padding-left: 2rem;
     margin-right: -5rem;
     border: none;
-
-    // skin
+    line-height: 1.333;
     background-color: $color-very-light-grey;
     font-family: "Helvetica Neue LTGEOW 82-55 Rm";
 
@@ -26,20 +26,14 @@
   }
 
   &__button {
-    // structure
     border: none;
-    border-radius: .7rem;
+    border-radius: .6rem;
     width: 4rem;
     margin: .5rem;
     position: relative;
 
-    // skin
     background-color: $primary-color;
     cursor: pointer;
-
-    &:focus {
-      outline: none;
-    }
   }
 
   &__icon {
