--- a/sass/components/main_components/_main-menu.scss
+++ b/sass/components/main_components/_main-menu.scss
@@ -6,7 +6,7 @@
   background-color: $color-white;
   font-size: 1.4rem;
 
-  @include respond(phone-land) {
+  @include respond(tab-port) {
     display: none;
   }
 
@@ -25,7 +25,7 @@
         margin-bottom: 1.2rem;
       }
 
-      &:after {
+      &::after {
         content: '';
         background-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ctitle%3Echeveron-right%3C/title%3E%3Cpath fill='%23d0d0d0' d='M12.95 10.707l0.707-0.707-5.657-5.657-1.414 1.414 4.242 4.243-4.242 4.243 1.414 1.414 4.95-4.95z'%3E%3C/path%3E%3C/svg%3E%0A");
         background-repeat: no-repeat;
@@ -46,8 +46,8 @@
     &-item {
       text-decoration: none;
       color: $color-very-dark-grey;
-      transition: all .01s;
       width: inherit;
+      @include hoverOnLink;
     }
   }
 }
