--- a/sass/pages/_t&c-page.scss
+++ b/sass/pages/_t&c-page.scss
@@ -1,10 +1,11 @@
 .terms-conditions {
+  display: flow-root;
   max-width: 88.140556369%;
   margin: 2.5rem auto 9.1rem auto;
-
   background-color: $color-white;
 
   @include respond(phone-land) {
     margin-top: 6rem;
+    max-width: 100%;
   }
 }
