--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,18 +1,37 @@
 .card {
-  width: 21.4rem;
-  transition: 200ms;
+  // width: 21.4rem;
+  width: #{"max(21.4rem, 165px)"};
+  transition: all .3s ease-in-out;
   border: 1px solid transparent;
   background-color: $color-white;
+  position: relative;
+  z-index: 1;
+  font-size: 16px;
 
   &:hover {
-    border-radius: 1rem;
-    border: 1px solid #E2E7ED;
+    transform: scale(1.05);
+  }
+
+  &:hover {
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: scale(1.05);
+      z-index: -1;
+      border-radius: 1rem;
+      border: 1px solid #E2E7ED;
+    }
   }
 
   // card image
   &__image {
     position: relative;
     height: 21.6rem;
+    height: #{"max(21.5rem, 165px)"};
 
     img {
       @include resImgNM
@@ -26,7 +45,7 @@
 
   &__title {
     font-family: "Helvetica Neue LTGEOW 82-55 Rm";
-    font-size: $font-size-big;
+    font-size: #{"min(max(14px, calc(0.875em + ((1vw - 3.75px) * 0.4036))), 18px)"};
     color: $color-very-dark-grey;
     line-height: 2.556;
     margin-bottom: 1.5rem;
@@ -38,14 +57,15 @@
     &-real {
       margin-right: 1.4rem;
       font-family: "Helvetica Neue LTGEOW 82-75 Bd";
-      font-size: $font-size-big;
+      font-size: 18px;
+      line-height: 1.3333333;
       color: $primary-color;
     }
 
     &-sale {
       margin-top: .2rem;
       font-family: "Helvetica Neue LTGEOW 82-55 Rm";
-      font-size: $font-size-md;
+      font-size: 14px;
       color: $color-black;
       text-decoration: line-through;
     }
