--- a/sass/components/_top-products-swiper.scss
+++ b/sass/components/_top-products-swiper.scss
@@ -1,12 +1,17 @@
 .top-products {
+  max-width: 88.140556369%;
+  position: relative;
+  overflow: hidden;
+  margin: 9rem auto 0;
+  background-color: $color-white;
+
   &__header {
-    position: absolute;
-    top: 3.9rem;
-    left: 3rem;
-    z-index: 2; //overlay swiper
+    margin: 3.2rem 0 0 3rem;
   }
 
   &__link {
+    margin: 1.2rem 0 3.9rem 0;
+
     a {
       text-decoration: none;
       font-size: $font-size-md;
@@ -23,25 +28,12 @@
   }
 
   &__swiper {
-    width: 100%;
     background-color: $color-white;
-    margin: 0;
-    position: relative;
+    padding: 2rem 3rem 4rem 3rem;
   }
 
-  &__swiper-wrapper {
-    padding: 14.4rem 3rem 4rem 3rem;
-
-    @include respond(phone-land) {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-    @include respond(tab-port) {
-      padding-top: 17.4rem;
-      padding-left: 0;
-      padding-right: 0;
-    }
+  &__slide {
+    width: auto;
   }
 
   &__slider-arrows {
@@ -56,8 +48,8 @@
 
   &__button-next,
   &__button-prev {
-    width: 22px;
-    height: 22px;
+    width: 18px;
+    height: 18px;
     cursor: pointer;
 
     &::after {
