--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -22,7 +22,7 @@
       height: 100%;
       transform: scale(1.05);
       z-index: -1;
-      border-radius: 1rem;
+      border-radius: 10px;
       border: 1px solid #E2E7ED;
     }
   }
