--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -48,7 +48,7 @@
     font-size: $font-size-md;
     color: $color-black;
     text-decoration: none;
-    line-height: 1.8;
+    line-height: 1.3;
     transition: all .1s ease-out;
     white-space: nowrap; // prevent word wrap
 
@@ -69,15 +69,12 @@
 
     &-link {
       display: inline-block;
+      height: 22px;
+      width: 22px;
 
       svg {
-        width: 1.8rem;
-        height: 1.8rem;
-
-        @include respond(phone-land) {
-          width: 3.6rem;
-          height: 3.6rem;
-        }
+        width: 18px;
+        height: 18px;
 
         &:hover path {
           fill: $primary-color;
@@ -85,7 +82,7 @@
       }
 
       &:not(:last-child) {
-        margin-right: 1.7rem;
+        margin-right: 17px;
       }
     }
   }
