--- a/sass/pages/_products-page.scss
+++ b/sass/pages/_products-page.scss
@@ -4,6 +4,8 @@
   background-color: $color-white;
 
   @include respond(phone-land) {
-    margin-top: 6rem;
+    max-width: 100%;
+    margin: 0 0 30px 0;
+    padding: 25px 17px 0 17px;
   }
 }
