--- a/sass/pages/_t&c-page.scss
+++ b/sass/pages/_t&c-page.scss
@@ -3,6 +3,7 @@
   max-width: 88.140556369%;
   margin: 2.5rem auto 9.1rem auto;
   background-color: $color-white;
+  border-radius: 10px;
 
   @include respond(phone-land) {
     margin-top: 6rem;
